APIの仕様変更
[PickUpData:データをサーバーから取得する]
+ 仕様変更に伴ない、データの所持者のIDをリクエスト時に必要とするように

[ReturnDataList:データのリストを返却する]
+ 画像のデータが返却されるリストに入っていなかった。
