# gen/http/cli/ssa_server/cli.go
@@ -323,6 +323,8 @@ func sSAServerPickUpDataUsage() {
 Example:
     `+os.Args[0]+` ssa-server pick-up-data --body '{
       "data_name": "Record_12_2019-06-02_12-07-35",
+      "data_user_id": 5365,
+      "iamge_name": "Image_2017-05-25-26-32",
       "user_id": 65
    }' --groupid "group-isg" --data-type "0"
 `, os.Args[0])
