# gen/http/openapi.yaml
@@ -174,6 +174,7 @@ paths:
           required:
           - user_id
           - data_name
+          - data_user_id
       responses:
         "200":
           description: OK response.
@@ -494,6 +495,15 @@ definitions:
         type: string
         description: Data name
         example: Record_12_2019-06-02_12-07-35
+      data_user_id:
+        type: integer
+        description: Data's User ID
+        example: 5365
+        format: int64
+      iamge_name:
+        type: string
+        description: Data name
+        example: Image_2017-05-25-26-32
       user_id:
         type: integer
         description: User ID
@@ -501,10 +511,13 @@ definitions:
         format: int64
     example:
       data_name: Record_12_2019-06-02_12-07-35
+      data_user_id: 5365
+      iamge_name: Image_2017-05-25-26-32
       user_id: 65
     required:
     - user_id
     - data_name
+    - data_user_id
   SSAServerPickUpDataResponseBodyDataExtendedWithImage:
     title: 'Mediatype identifier: application/vnd.ssa.result; view=data_extended_with_image'
     type: object
